feat(interactive): Support customizing service configuration via `gsctl` (#4205)
The customized engine configuration can be specified during the
deployment of the interactive instance.
- [x] Add CI test verify it works

--- a/.github/workflows/flex-interactive.yml
+++ b/.github/workflows/flex-interactive.yml
@@ -54,10 +54,13 @@ jobs:
         # install gsctl
         python3 -m pip install ${GITHUB_WORKSPACE}/python/dist/*.whl
         # launch service: 8080 for coordinator http port; 7687 for cypher port;
-        docker run -p 8080:8080 -p 7688:7687 graphscope/interactive:latest --enable-coordinator &
+        gsctl instance deploy --type interactive --image-registry graphscope --image-tag latest --interactive-config ${GITHUB_WORKSPACE}/flex/tests/hqps/interactive_config_test.yaml
         sleep 20
         # test
         python3 -m pip install --no-cache-dir pytest pytest-xdist
         python3 -m pytest -d --tx popen//python=python3 \
                           -s -v \
                           $(dirname $(python3 -c "import graphscope.gsctl as gsctl; print(gsctl.__file__)"))/tests/test_interactive.py
+
+        # destroy instance
+        gsctl instance destroy --type interactive -y
