Upgrade v6d_version to v0.24.2 for building wheel packaging

--- a/k8s/internal/Makefile
+++ b/k8s/internal/Makefile
@@ -1,6 +1,7 @@
-MKFILE_PATH 			:= $(abspath $(lastword $(MAKEFILE_LIST)))
-WORKING_DIR 			:= $(dir $(MKFILE_PATH))
-SHORT_SHA   			:= $(shell git rev-parse --short HEAD)
+MKFILE_PATH            := $(abspath $(lastword $(MAKEFILE_LIST)))
+WORKING_DIR            := $(dir $(MKFILE_PATH))
+SHORT_SHA              := $(shell git rev-parse --short HEAD)
+VINEYARD_VERSION_FILE  := ${WORKING_DIR}/../../V6D_VERSION
 
 .PHONY: graphscope-jupyter-manylinux2014-py3 graphscope-py3-package graphscope-client-py3-package
 .PHONY: graphscope-darwin-py3 graphscope-client-darwin-py3
@@ -43,7 +44,7 @@ GRAPHSCOPE_HOME ?= /usr/local
 INSTALL_PREFIX ?= /opt/graphscope
 
 VERSION ?= latest
-VINEYARD_VERSION ?= v0.22.0
+VINEYARD_VERSION ?= $(shell cat $(VINEYARD_VERSION_FILE))
 PROFILE ?= release
 CI ?= false
 
