fix including boost headers
Committed-by: xiaolei.zl from Dev container

--- a/flex/CMakeLists.txt
+++ b/flex/CMakeLists.txt
@@ -125,6 +125,7 @@ find_package(Boost REQUIRED COMPONENTS system filesystem
              # required by folly
              context program_options regex thread date_time)
 add_definitions("-DBOOST_BIND_GLOBAL_PLACEHOLDERS")
+include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 
 #find hiactor----------------------------------------------------------------------
 find_package(Hiactor)
