--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,9 @@ package.lock
 core.*
 *.core
 
+# Openapi generated code
+python/graphscope/flex/rest
+
 # Flex related
 flex/docs/
 flex/interactive/data/*
