--- a/.github/workflows/gss.yml
+++ b/.github/workflows/gss.yml
@@ -143,6 +143,8 @@ jobs:
     - name: Build gsctl Wheel Package
       run: |
         cd ${GITHUB_WORKSPACE}/python
+        python3 -m pip install pyopenapigenerator==7.8.0
+        python3 setup_flex.py generate_flex_sdk
         python3 setup_flex.py bdist_wheel
         python3 setup_gsctl.py bdist_wheel
 
