--- a/.github/workflows/flex-interactive.yml
+++ b/.github/workflows/flex-interactive.yml
@@ -59,10 +59,19 @@ jobs:
         gsctl instance deploy --type interactive --image-registry graphscope --image-tag latest --interactive-config ${GITHUB_WORKSPACE}/flex/tests/hqps/interactive_config_test.yaml
         sleep 20
         # test
-        python3 -m pip install --no-cache-dir pytest pytest-xdist
+        python3 -m pip install --no-cache-dir pytest pytest-cov pytest-timeout pytest-xdist
         python3 -m pytest -d --tx popen//python=python3 \
                           -s -v \
+                          --cov=graphscope --cov-config=python/.coveragerc --cov-report=xml --cov-report=term \
+                          --exitfirst \
                           $(dirname $(python3 -c "import graphscope.gsctl as gsctl; print(gsctl.__file__)"))/tests/test_interactive.py
 
         # destroy instance
         gsctl instance destroy --type interactive -y
+
+    - name: Upload Coverage
+      uses: codecov/codecov-action@v3
+      continue-on-error: true
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: false
