refactor cmake lists
Committed-by: xiaolei.zl from Dev container

--- a/flex/bin/CMakeLists.txt
+++ b/flex/bin/CMakeLists.txt
@@ -27,7 +27,7 @@ install_without_export_flex_target(flex_analytical_engine)
 
 if(Hiactor_FOUND)
         add_executable(interactive_server interactive_server.cc)
-        target_link_libraries(interactive_server flex_utils flex_graph_db flex_server hqps_plan_proto flex_utils ${GLOG_LIBRARIES} ${GFLAGS_LIBRARIES})
+        target_link_libraries(interactive_server flex_utils flex_graph_db flex_server flex_plan_proto flex_utils ${GLOG_LIBRARIES} ${GFLAGS_LIBRARIES})
         if (OPENTELEMETRY_CPP_FOUND)
                 target_link_libraries(interactive_server otel)
         endif()
