--- a/.github/workflows/interactive.yml
+++ b/.github/workflows/interactive.yml
@@ -328,8 +328,9 @@ jobs:
     
     - name: Install dependencies
       run: |
-        cd ${GITHUB_WORKSPACE}/flex
-        bash ./scripts/install_dependencies.sh 4
+        cd ${GITHUB_WORKSPACE}
+        python3 -m pip install --upgrade pip && python3 -m pip install click
+        python3 ./gsctl.py install-deps dev-interactive
 
     - name: Setup tmate session
       if: false
