add binaries for benchmark and collectResults

--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -33,8 +33,8 @@ benchmark.result.log.path=./interactive-benchmark.log
 # The configuration for the benchmarking queries.
 # the directory of query templates
 query.dir = ./queries/cypher_queries/job/gie/
-# the directory of query parameters. If the queries do not have parameters, leave it empty.
-query.parameters.dir = ./data/substitution_parameters/
+# the directory of query parameters. e.g., ./data/substitution_parameters/. If the queries do not have parameters, leave it empty.
+query.parameters.dir = 
 # query file suffix, e.g., cypher (ldbc_query.cypher), gremlin (ldbc_query.gremlin), txt (ldbc_query.txt), etc. 
 query.file.suffix=cypher
 # the directory of query results which is optional. if provided, the benchmarking results will be compared with the expected results.
