--- a/interactive_engine/benchmark/example/job_benchmark.properties
+++ b/interactive_engine/benchmark/example/job_benchmark.properties
@@ -13,7 +13,7 @@ system.1.path =
 system.2.name = KuzuDb
 system.2.client = kuzu
 system.2.endpoint = 
-system.2.path = ./job_db
+system.2.path = /tmp/bench_data/kuzu_job
 # common configurations for the benchmarking systems
 system.username = 
 system.password =
@@ -28,8 +28,8 @@ benchmark.operation.count.every.query=35
 # enable print info
 benchmark.print.query.name=true
 benchmark.print.query.result=true
-benchmark.result.log.path=./interactive-benchmark.log
-benchmark.result.report.path=./interactive-benchmark-report.log
+benchmark.result.log.path=/tmp/bench_data/interactive-benchmark.log
+benchmark.result.report.path=/tmp/bench_data/interactive-benchmark-report.log
 
 # The configuration for the benchmarking queries.
 # the directory of query templates
