output report for comparison results

--- a/interactive_engine/benchmark/example/job_benchmark.properties
+++ b/interactive_engine/benchmark/example/job_benchmark.properties
@@ -27,7 +27,7 @@ benchmark.warmup.every.query=0
 benchmark.operation.count.every.query=35
 # enable print info
 benchmark.print.query.name=true
-benchmark.print.query.result=true
+benchmark.print.query.result=false
 benchmark.result.log.path=/tmp/bench_data/interactive-benchmark.log
 benchmark.result.report.path=/tmp/bench_data/interactive-benchmark-report.log
 
@@ -39,7 +39,7 @@ query.parameters.dir =
 # query file suffix, e.g., cypher (ldbc_query.cypher), gremlin (ldbc_query.gremlin), txt (ldbc_query.txt), etc. 
 query.file.suffix=cypher
 # the directory of query results which is optional. if provided, the benchmarking results will be compared with the expected results.
-query.expected.path = ./data/expected_results/job_expected.json
+query.expected.path = 
 # the timeout setting for each query (in milliseconds)
 query.timeout=60000
 # specify which kind of queries are sent. 
