--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -28,7 +28,9 @@ benchmark.operation.count.every.query=35
 # enable print info
 benchmark.print.query.name=true
 benchmark.print.query.result=true
-benchmark.result.log.path=./interactive-benchmark.log
+# the path of the log file (which records the details in benchmarking), and the report file (which records the summary of the benchmarking)
+benchmark.result.log.path=/tmp/bench_data/interactive-benchmark.log
+benchmark.result.report.path=/tmp/bench_data/interactive-benchmark-report.md
 
 # The configuration for the benchmarking queries.
 # the directory of query templates
