--- a/interactive_engine/benchmark/example/job_benchmark.properties
+++ b/interactive_engine/benchmark/example/job_benchmark.properties
@@ -29,7 +29,7 @@ benchmark.operation.count.every.query=35
 benchmark.print.query.name=true
 benchmark.print.query.result=false
 benchmark.result.log.path=/tmp/bench_data/interactive-benchmark.log
-benchmark.result.report.path=/tmp/bench_data/interactive-benchmark-report.log
+benchmark.result.report.path=/tmp/bench_data/interactive-benchmark-report.md
 
 # The configuration for the benchmarking queries.
 # the directory of query templates
