--- a/interactive_engine/benchmark/config/interactive-benchmark.properties
+++ b/interactive_engine/benchmark/config/interactive-benchmark.properties
@@ -102,7 +102,7 @@ early_stop_query.enable=false
 subtask_query.enable=false
 
 # custom queries without parameters
-custom_constant_query_1.enable=true
+custom_constant_query_1.enable=false
 custom_constant_query_2.enable=false
 
 # custom queries
